<resources>
    <string name="app_name">Stellar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Secret Key</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_contacts">Contacts</string>
    <string name="login_successful">Login Successful</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_login">Login</string>
    <string name="address_public_placeholder">* Public address *</string>
    <string name="address_private_placeholder">* Private address *</string>
    <string name="balance_placeholder">* Balance * </string>
    <string name="new_transaction_address_placeholder">Address</string>
    <string name="new_transaction_amount_placeholder">Amount</string>
    <string name="new_transaction_memo_text_placeholder">Memo text</string>
    <string name="btn_commit">commit</string>
    <string name="require_pin">Pin code needed!</string>
    <string name="add_label">Add</string>
    <string name="name_label">Name</string>
    <string name="public_key_label">Public key</string>
    <string name="btn_save">Save</string>
    <string name="delete_label">Delete</string>
    <string name="edit_label">Edit</string>
    <string name="transaction">Transaction</string>
    <string name="enter_pin_label">Enter PIN</string>
    <string name="circe">circe</string>
</resources>