<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".ui.contacts.edit.ContactEditFragment">

    <EditText
        android:id="@+id/contact_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/name_label"
        android:inputType="textPersonName"
        android:autofillHints="name_label" />

    <EditText
        android:id="@+id/contact_edit_publicKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/public_key_label"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:autofillHints="@string/public_key_label" />

    <Button
        android:id="@+id/contact_edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:text="@string/btn_save" />
</LinearLayout>