<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="start"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/contact_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_publicKey_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#FFFFFF"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/contact_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/logout"
            android:contentDescription="@string/delete_label" />

        <ImageButton
            android:id="@+id/contact_btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/edit_label" />

        <ImageButton
            android:id="@+id/contact_btn_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#673AB7"
            app:tint="#FFFFFF"
            app:srcCompat="@drawable/transactions"
            android:contentDescription="@string/transaction" />

    </LinearLayout>

</RelativeLayout>